# aec-pbfdaf-baseline

./: LICENSE  README.md
aec-pbfdaf-baseline/: CMakeLists.txt  README.md
aec-pbfdaf-baseline/APO/: ApoParams.h  EchoApo.cpp  EchoApo.h  README.md
aec-pbfdaf-baseline/docs/: architecture.md
aec-pbfdaf-baseline/src/aec_core/: AECProcessor.cpp  AECProcessor.h  AIEnhancer.cpp  AIEnhancer.h  CMakeLists.txt  FftUtil.h  README.md
aec-pbfdaf-baseline/src/app_gui/: CMakeLists.txt  ControlPanel.cpp  DeviceUtil.cpp  DeviceUtil.h  EchoApp.cpp  MainWindow.cpp  MainWindow.h  README.md  WasapiMain.cpp  WasapiRunner.cpp  WasapiRunner.h  main.cpp  main_qt.cpp
